<resources>
    <string name="app_name">Dezurka</string>
    <string name="login_btn">Prijava</string>
    <string name="username_hint">Uporabniško ime</string>
    <string name="password_hint">Geslo</string>
    <string name="email_hint">E-pošta</string>
    <string name="register_btn">Registracija</string>
    <string name="register_successful_msg">Registracija uspešna, prijavite se s svojimi podatki.</string>
    <string name="signIn_successful_msg">\"Dobrodošli nazaj, \"</string>
    <string name="confirm_password_hint">Potrdi geslo</string>
    <string name="register_title">Ustvari račun</string>
    <string name="passwords_do_not_match_msg">Gesla se ne ujemata</string>
    <string name="title_activity_dashboard">DashboardActivity</string>

    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>

    <string name="hello_first_fragment">Hello first fragment</string>
    <string name="hello_second_fragment">Hello second fragment. Arg: %1$s</string>
    <string name="my_dates_btn">Moji termini</string>
    <string name="available_dates_btn">Razpis terminov</string>
    <string name="trades_btn">Menjave / Oddaje</string>
    <string name="my_dates_text2_p1">"Naslednji termin čez "</string>
    <string name="my_dates_text2_p2">" dni"</string>
    <string name="available_dates_text2_p1">"Naslednji razpis čez "</string>
    <string name="available_dates_text2_p2">" dni"</string>
    <string name="trades_text2">Menjaj ali oddaj termin</string>
    <string name="trades_text3">" aktivnih ponudb"</string>
    <string name="exit_popup_dialog">Želite zapustiti aplikacijo?</string>
    <string name="exit_popup_dialog_confirm">Da</string>
    <string name="exit_popup_dialog_cancel">Prekliči</string>
    <string name="toolbartext">ToolbarText</string>
    <string name="settings">Nastavitve</string>
    <string name="hours_filter_1">00h - 06h</string>
    <string name="hours_filter_2">06h - 12h</string>
    <string name="hours_filter_3">12h - 18h</string>
    <string name="hours_filter_4">18h - 24h</string>
    <string name="settings_text_1">SPLOŠNO</string>
    <string name="settings_text_2">OBVESTILA</string>
    <string name="settings_text_3">PROFIL</string>
    <string name="settings_text_4">POMOČ</string>
    <string name="notifications_switch">Obvestila</string>
    <string name="my_dates_ntf_checkbox">Termin dežurstva</string>
    <string name="available_dates_ntf_checkbox">Rezervacije terminov</string>
    <string name="trade_offer_ntf_checkbox">TPonudba menjave</string>
    <string name="giveaway_offer_ntf_checkbox">Ponudba oddaje</string>
    <string name="new_offer_ntf_checkbox">Nova ponudba v tvojem domu</string>
    <string name="sound_ntf_checkbox">Zvok</string>
    <string name="vibration_ntf_checkbox">Vibracije</string>
    <string name="theme_switch">Tema aplikacije</string>
    <string name="language">Jezik</string>
    <string name="logout_text">ODJAVA</string>
    <string name="mystudent_text">MOJ ŠTUDENT</string>
    <string name="settings_help_text_1">PRAVILNIK DEŽURSTVA</string>
    <string name="settings_help_text_2">KONTAKT DO UPRAVE</string>
    <string name="settings_help_text_3">POGOSTA VPRAŠANJA</string>
    <string name="rules_text">31. člen (dežurna vratarska služba) V domovih je organizirana stalna dežurna vratarska služba, ki so jo dolžni brezplačno opravljati študentje doma po razporedu, razen če to delo opravlja profesionalna varnostna služba. Opravlja se v vratarski loži, po navodilih uprave. Odgovorna oseba za organizacijo dežurstva je namestnik predstavnika doma, kadar pa varuje profesionalna služba pa organizira varovanje varnostni inženir. ŠTUDENTSKI DOM LJUBLJANA Cesta 27. aprila 31, 1000 Ljubljana Telefon: (01) 242 1000, Faks: (01) 242 1010 E-pošta: studentski.domovi@siol.net Kadar opravljajo dežurno službo študentje, razpored dežurstva pripravlja namestnik predstavnika doma in ga pravočasno razobesi v vratarski loži. Dežurni sme opravljati varovanje največ 12 ur dnevno. 32. člen (plačano dežurstvo) V domovih, kjer stanovalci neredno opravljajo dežurno vratarsko službo in v domovih, kjer se stanovalci sami dogovorijo za plačano dežurstvo, to lahko opravljajo dežurni študentje, na stroške vseh stanovalcev. V tem primeru predstavnik doma obvesti direktorico. Stanovalci lahko na sestanku doma sprejmejo sklep, da se neopravljeno dežurstvo sankcionira s plačilom kot nadomestilo za neopravljeno dežurstvo, ki je enako kot plačilo za dežurstvo. Profesionalno varnostno službo odredi direktorica Zavoda. 33. člen ( zamenjava dežurnega) Stanovalec, ki ne more nastopiti dežurne službe v času, za katerega je razporejen, si je dolžan pravočasno zagotoviti zamenjavo in o tem obvestiti namestnika predstavnika doma. 34. člen (izjeme od dežurstva) Roditelj, ki živi v domu sam z otrokom, nosečnice od petega meseca nosečnosti dalje, bolniki in invalidi ne dežurajo, razen v primeru, če to sami želijo. Tuji študenti, ki so v domu prvo leto, ne morejo dežurati, ker ne poznajo jezika in razmer. Vsi navedeni, za katere dolžnost dežurstva ne velja, plačujejo nadomestilo za neopravljanje dežurstva.</string>
    <string name="uprava_phone_number">(01) 242 1000</string>
    <string name="uprava_address">Svetčeva ulica 9, 1000 Ljubljana</string>
    <string name="uprava_email">studentski.domovi@stud-dom-lj.si</string>
    <string name="uprava_webpage">https://www.stud-dom-lj.si</string>
    <string name="trade_offer_success">Objava uspešna!</string>
    <string name="trade_offer_success_2">Ob ponudbi boš prejel/a obvestilo!</string>
    <string-array name="languages">
        <item>Slovenščina</item>
        <item>English</item>
    </string-array>

    <string-array name="homes_array">
        <item>Dom 1, Rožna Dolina</item>
        <item>Dom 2, Rožna Dolina</item>
        <item>Dom 3, Rožna Dolina</item>
        <item>Dom 4, Rožna Dolina</item>
        <item>Dom 5, Rožna Dolina</item>
    </string-array>

    <string-array name="group_array">
        <item>Kardeljeva Ploščad</item>
        <item>Rožna Dolina</item>
        <item>Mestni log</item>
        <item>Gerba</item>
    </string-array>

    <string name="q1">Kolikšna je urna postavka?</string>
    <string name="q2">Ali lahko dežuram v vseh domovih?</string>
    <string name="q3">Ali lahko spim med dežuranjem?</string>
    <string name="q4">Kako uprava ve, da opravljam svoje delo?</string>
    <string name="q5">Ali je pomembno kateri študentski servis uporabljam?</string>
    <string name="q6">Kaj se zgodi če pozabim priti nas svoj terin?</string>

    <string name="a1">Bruto: 5,87€ Neto: 4,98€.</string>
    <string name="a2">Dežuraš lahko v vseh domovih lastnega naselja, vendar imaš pravico do rezervacije terminov le v lastnem domu.</string>
    <string name="a3">Spanje med dežuranjem bo kaznovano s prepovedjo nadaljnea opravljanja dela.</string>
    <string name="a4">2-3 krat na termin boste prejeli klic iz uprave, ki preverja vašo prisotnost. Prav tako vaše pravilno opravljanje službe dežurnega preveri varnostnih.</string>
    <string name="a5">Ni pomembno. Za prejem zaslužka je potrebno izdati napotnico pred začetkom novega delovnega mesca.</string>
    <string name="a6">Če je dežurna loža prazna, se bo odprla izredna rezervacija, katero prevzame najhitrejši. V tem primeru ne prejmete plačila in plačilo prejme prevzemnik.</string>

</resources>