<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q1"
                android:textColor="@color/dezurka_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a1"
                android:textColor="@color/dezurka_white"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q2"
                android:textColor="@color/dezurka_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a2"
                android:textColor="@color/dezurka_white"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q3"
                android:textColor="@color/dezurka_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a3"
                android:textColor="@color/dezurka_white"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q4"
                android:textColor="@color/dezurka_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a4"
                android:textColor="@color/dezurka_white"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q5"
                android:textColor="@color/dezurka_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a5"
                android:textColor="@color/dezurka_white"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/q6"
                android:textColor="@color/dezurka_white"
                android:textSize="20sp"
                android:textStyle="bold"
                android:paddingHorizontal="20dp"
                android:paddingTop="20dp"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/a6"
                android:textColor="@color/dezurka_white"
                android:paddingHorizontal="20dp"
                android:paddingTop="10dp"/>

        </LinearLayout>

    </ScrollView>

    <include
        android:id="@+id/include4"
        layout="@layout/hamburger_layout" />

</LinearLayout>