<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".SettingsGeneralActivity">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <androidx.cardview.widget.CardView
        android:id="@+id/cardView"
        android:layout_width="@dimen/card_view_width"
        android:layout_height="wrap_content"
        android:background="@color/dezurka_blue"
        android:elevation="@dimen/cardview_default_elevation"
        app:cardCornerRadius="10dp"
        app:cardPreventCornerOverlap="true"
        app:cardUseCompatPadding="true"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/toolbar"
        app:layout_constraintVertical_bias="0.0"
        android:layout_marginTop="20dp">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">

            <Switch
                android:id="@+id/notifications_switch"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_margin="10dp"
                android:fontFamily="@font/creatodisplay_light"
                android:text="@string/notifications_switch"
                android:textColor="@color/dezurka_white"
                android:textSize="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintVertical_bias="0.0" />

            <View
                android:id="@+id/view"
                android:layout_width="match_parent"
                android:layout_height="1dp"
                android:layout_margin="10dp"
                android:background="@color/dezurka_white"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/notifications_switch"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/my_dates_ntf_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:button="@drawable/custom_checkbox"
                android:fontFamily="@font/creatodisplay_light"
                android:layoutDirection="rtl"
                android:text="@string/my_dates_ntf_checkbox"
                android:textColor="@color/dezurka_white"
                android:textSize="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="1.0"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/view"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/available_dates_ntf_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:button="@drawable/custom_checkbox"
                android:fontFamily="@font/creatodisplay_light"
                android:layoutDirection="rtl"
                android:text="@string/available_dates_ntf_checkbox"
                android:textColor="@color/dezurka_white"
                android:textSize="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/my_dates_ntf_checkbox"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/trade_offer_ntf_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:button="@drawable/custom_checkbox"
                android:fontFamily="@font/creatodisplay_light"
                android:layoutDirection="rtl"
                android:text="@string/trade_offer_ntf_checkbox"
                android:textColor="@color/dezurka_white"
                android:textSize="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/available_dates_ntf_checkbox"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/giveaway_offer_ntf_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:button="@drawable/custom_checkbox"
                android:fontFamily="@font/creatodisplay_light"
                android:layoutDirection="rtl"
                android:text="@string/giveaway_offer_ntf_checkbox"
                android:textColor="@color/dezurka_white"
                android:textSize="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/trade_offer_ntf_checkbox"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/new_offer_ntf_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:button="@drawable/custom_checkbox"
                android:fontFamily="@font/creatodisplay_light"
                android:layoutDirection="rtl"
                android:text="@string/new_offer_ntf_checkbox"
                android:textColor="@color/dezurka_white"
                android:textSize="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.8"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/giveaway_offer_ntf_checkbox"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/sound_ntf_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="10dp"
                android:button="@drawable/custom_checkbox"
                android:fontFamily="@font/creatodisplay_light"
                android:layoutDirection="rtl"
                android:text="@string/sound_ntf_checkbox"
                android:textColor="@color/dezurka_white"
                android:textSize="22dp"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.6"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/new_offer_ntf_checkbox"
                app:layout_constraintVertical_bias="0.0" />

            <CheckBox
                android:id="@+id/vibration_ntf_checkbox"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:fontFamily="@font/creatodisplay_light"
                android:text="@string/vibration_ntf_checkbox"
                android:textColor="@color/dezurka_white"
                android:textSize="22dp"
                android:button="@drawable/custom_checkbox"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/sound_ntf_checkbox"
                android:layoutDirection="rtl"/>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </androidx.cardview.widget.CardView>

    <include
        layout="@layout/hamburger_layout"/>

</androidx.constraintlayout.widget.ConstraintLayout>